--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1386,11 +1386,6 @@ body {
 .cid-qPYFLFxkZ9 .mbr-section-subtitle {
   font-style: italic;
 }
-.cid-qPYGKojSzr {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-image: url("../../../assets/images/jumbotron.jpg");
-}
 .cid-qPYGPlIy1X {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1430,4 +1425,31 @@ body {
 }
 .cid-qPYGPzkpbF .card-wrapper {
   height: 100%;
+}
+.cid-qQ01q8ldDx {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/issues-by-catagory-2000x1545.jpg");
+}
+.cid-qQ01q8ldDx .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.cid-qQ01q8ldDx .mbr-figure img {
+  height: 100%;
+  margin: 0 auto;
+}
+@media (max-width: 991px) {
+  .cid-qQ01q8ldDx .mbr-figure img {
+    width: 100% !important;
+  }
+}
+.cid-qQ01q8ldDx .mbr-text,
+.cid-qQ01q8ldDx .mbr-section-btn {
+  color: #232323;
+}
+.cid-qQ01q8ldDx H1 {
+  color: #4f4943;
 }
