create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1455,7 +1455,7 @@ body {
 .cid-qQ01q8ldDx {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/issues-by-catagory-2000x1545.jpg");
+  background-color: #efefef;
 }
 .cid-qQ01q8ldDx .mbr-figure {
   margin: 0 auto;
